--- a/.drone.yml
+++ b/.drone.yml
@@ -8,7 +8,7 @@ platform:
 
 steps:
   - name: init
-    image: quay.io/sighup/e2e-testing-drone-plugin:v0.1.0-rc7
+    image: quay.io/sighup/e2e-testing-drone-plugin:v0.1.0-rc8
     pull: always
     volumes:
     - name: shared
@@ -16,6 +16,7 @@ steps:
     depends_on: [ clone ]
     settings:
       action: cluster-116
+      pipeline_id: cluster-116
       instance_path: /shared
       aws_default_region:
         from_secret: aws_region
@@ -46,11 +47,84 @@ steps:
       - push
 
   - name: destroy
-    image: quay.io/sighup/e2e-testing-drone-plugin:v0.1.0-rc7
+    image: quay.io/sighup/e2e-testing-drone-plugin:v0.1.0-rc8
     pull: always
     depends_on: [ e2e ]
     settings:
       action: destroy
+      pipeline_id: cluster-116
+      aws_default_region:
+        from_secret: aws_region
+      aws_access_key_id:
+        from_secret: aws_access_key_id
+      aws_secret_access_key:
+        from_secret: aws_secret_access_key
+      terraform_tf_states_bucket_name:
+        from_secret: terraform_tf_states_bucket_name
+    when:
+      status:
+      - success
+      - failure
+
+volumes:
+- name: shared
+  temp: {}
+
+---
+kind: pipeline
+name: e2e-kubernetes-1.15
+
+platform:
+  os: linux
+  arch: amd64
+
+steps:
+  - name: init
+    image: quay.io/sighup/e2e-testing-drone-plugin:v0.1.0-rc8
+    pull: always
+    volumes:
+    - name: shared
+      path: /shared
+    depends_on: [ clone ]
+    settings:
+      action: cluster-115
+      pipeline_id: cluster-115
+      instance_path: /shared
+      aws_default_region:
+        from_secret: aws_region
+      aws_access_key_id:
+        from_secret: aws_access_key_id
+      aws_secret_access_key:
+        from_secret: aws_secret_access_key
+      terraform_tf_states_bucket_name:
+        from_secret: terraform_tf_states_bucket_name
+    when:
+      event:
+      - push
+
+  - name: e2e
+    image: angelbarrera92/fury-e2e-testing:local
+    pull: always
+    volumes:
+    - name: shared
+      path: /shared
+    depends_on: [ init ]
+    commands:
+      - export CLUSTER_NAME=115
+      - export INSTANCE_IP=$(cat /shared/machine/ip)
+      - export KUBECONFIG=/shared/kube/kubeconfig-115
+      - bats katalog/tests/istio-bats.sh
+    when:
+      event:
+      - push
+
+  - name: destroy
+    image: quay.io/sighup/e2e-testing-drone-plugin:v0.1.0-rc8
+    pull: always
+    depends_on: [ e2e ]
+    settings:
+      action: destroy
+      pipeline_id: cluster-115
       aws_default_region:
         from_secret: aws_region
       aws_access_key_id:
