--- a/.drone.yml
+++ b/.drone.yml
@@ -31,7 +31,7 @@ steps:
       - push
 
   - name: e2e
-    image: angelbarrera92/fury-e2e-testing:local
+    image: quay.io/sighup/e2e-testing:1.1.0_0.1.3_2.16.1_1.4.0_1.16.3_3.2.2_2.4.1
     pull: always
     volumes:
     - name: shared
@@ -103,7 +103,7 @@ steps:
       - push
 
   - name: e2e
-    image: angelbarrera92/fury-e2e-testing:local
+    image: quay.io/sighup/e2e-testing:1.1.0_0.1.3_2.16.1_1.4.0_1.15.6_3.2.2_2.4.1
     pull: always
     volumes:
     - name: shared
@@ -125,6 +125,78 @@ steps:
     settings:
       action: destroy
       pipeline_id: cluster-115
+      aws_default_region:
+        from_secret: aws_region
+      aws_access_key_id:
+        from_secret: aws_access_key_id
+      aws_secret_access_key:
+        from_secret: aws_secret_access_key
+      terraform_tf_states_bucket_name:
+        from_secret: terraform_tf_states_bucket_name
+    when:
+      status:
+      - success
+      - failure
+
+volumes:
+- name: shared
+  temp: {}
+
+---
+kind: pipeline
+name: e2e-kubernetes-1.14
+
+platform:
+  os: linux
+  arch: amd64
+
+steps:
+  - name: init
+    image: quay.io/sighup/e2e-testing-drone-plugin:v0.1.0-rc8
+    pull: always
+    volumes:
+    - name: shared
+      path: /shared
+    depends_on: [ clone ]
+    settings:
+      action: cluster-114
+      pipeline_id: cluster-114
+      instance_path: /shared
+      aws_default_region:
+        from_secret: aws_region
+      aws_access_key_id:
+        from_secret: aws_access_key_id
+      aws_secret_access_key:
+        from_secret: aws_secret_access_key
+      terraform_tf_states_bucket_name:
+        from_secret: terraform_tf_states_bucket_name
+    when:
+      event:
+      - push
+
+  - name: e2e
+    image: quay.io/sighup/e2e-testing:1.1.0_0.1.3_2.16.1_1.4.0_1.14.9_3.2.2_2.4.1
+    pull: always
+    volumes:
+    - name: shared
+      path: /shared
+    depends_on: [ init ]
+    commands:
+      - export CLUSTER_NAME=114
+      - export INSTANCE_IP=$(cat /shared/machine/ip)
+      - export KUBECONFIG=/shared/kube/kubeconfig-114
+      - bats katalog/tests/istio-bats.sh
+    when:
+      event:
+      - push
+
+  - name: destroy
+    image: quay.io/sighup/e2e-testing-drone-plugin:v0.1.0-rc8
+    pull: always
+    depends_on: [ e2e ]
+    settings:
+      action: destroy
+      pipeline_id: cluster-114
       aws_default_region:
         from_secret: aws_region
       aws_access_key_id:
